# Sandpile

./: .gitignore  LICENSE  QUICKSTART.md  README.md  demo.py  pyproject.toml  requirements.txt
src/: __init__.py
src/sandpile/: __init__.py  __main__.py  cli.py
src/sandpile/core/: __init__.py  engine.py  grid.py
src/sandpile/deposition/: __init__.py
src/sandpile/persistence/: __init__.py
src/sandpile/statistics/: __init__.py
src/sandpile/toppling/: __init__.py
src/sandpile/visualization/: colormap.py  exporter.py  gui.py  renderer.py
tests/: __init__.py  test_core.py  test_visualization.py
